# crm-kanban

./: .env.example  .gitignore  ACCES.md  CRM-Kanban.postman_collection.json  Local-CRM.postman_environment.json  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  boards.py  cards.py  columns.py  comments.py  health.py
app/core/: config.py
app/db/: session.py
app/models/: board.py  board_member.py  user.py
app/schemas/: board.py
app/services/: board_service.py
client/: .env  .env.example  .gitignore  README.md  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.jsx  index.js  routes.js
client/src/service/: auth.js  boards.js  cards.js  columns.js  comments.js  http.js  token.js
client/src/services/: mockApi.js  mockData.js
client/src/store/: rootReducer.js  store.js
client/src/styles/: global.css
client/src/utils/: normalizeBoard.js  toastBus.js
server/: .env  package-lock.json  package.json
server/prisma/: schema.prisma
server/src/: app.js  server.js
server/src/constants/: roles.js
server/src/controllers/: auth.controller.js  boards.controller.js  cards.controller.js  column.controller.js  comments.controller.js
server/src/db/: prisma.js
server/src/docs/: API.md  AUTH.md  EXAMPLES.md  SCENARIOS.md  SETUP.md
server/src/middlewares/: auth.middleware.js  board-access.middleware.js  card-access.middleware.js  column-access.middleware.js  comment-access.middleware.js  error.middleware.js  (+1 more)
(+69 files in other folders)
